# QtMvvm

./: .gitignore  CMAKE_BUILD.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  NATIVE_INTERFACE_CHANGELOG.md  README.md
.github/workflows/: cmake.yml
cmake/: QtMvvmConfig.cmake.in
doc/: ADAPTER_ARCHITECTURE_GUIDE.md  BUILD_CONFIGURATION.md  CMAKE_MIGRATION_SUMMARY.md  COMPLETE_NATIVE_INTERFACE_SUMMARY.md  MIGRATION_TO_NATIVE.md  NATIVE_INTERFACE_ROADMAP.md  NATIVE_INTERFACE_SUMMARY.md  PHASE_2A_SUMMARY.md  PHASE_2B_SUMMARY.md  PHASE_2C_SUMMARY.md  PURE_CPP_REFACTORING_SUMMARY.md  native_interface_guide.md
examples/: CMakeLists.txt
examples/android_adapter/: IMPLEMENTATION_SUMMARY.md  android_view_adapter.h
examples/imgui_adapter/: README.md  imgui_example_viewmodel.cpp  imgui_example_viewmodel.h  imgui_main.cpp  imgui_presenter.cpp  imgui_presenter.h  imgui_view_adapter.cpp  imgui_view_adapter.h
examples/native/: README.md  integration_example.cpp  message_example.cpp  serviceregistry_example.cpp  simple_native_example.cpp  viewmodel_binding_example.cpp
examples/native_widget_integration/: CMakeLists.txt  README.md  main.cpp  native_widget_integration.pro  nativeexampleview.cpp  nativeexampleview.h  nativeexampleview.ui  nativeexampleviewmodel.cpp  nativeexampleviewmodel.h
src/: CMakeLists.txt
src/mvvmcore/: CMakeLists.txt  NativeInterface  README.md  messageadapter.cpp  messageadapter.h  mvvmcore.pro  nativebinding.cpp  nativebinding.h  nativemessage.cpp  nativemessage.h  nativepresenter.cpp  nativepresenter.h  nativeserviceregistry.cpp  nativeserviceregistry.h  nativeview.cpp  nativeview.h  nativeviewmodel.cpp  nativeviewmodel.h  presenteradapter.cpp  presenteradapter.h
src/mvvmqtadapter/: CMakeLists.txt  README.md  bindingadapter.cpp  bindingadapter.h  mvvmqtadapter.pro  nativewidgetspresenter.h  presenteradapter.cpp  qtwidgetadapter.h  serviceregistryadapter.cpp  serviceregistryadapter.h  viewmodeladapter.cpp  viewmodeladapter.h
src/mvvmwidgets/: CMakeLists.txt  QtNativeWidgets  mvvmwidgets.pro  nativewidgetspresenter.cpp  nativewidgetspresenter.h  qtwidgetadapter.cpp
